2014-05-16  Roland McGrath  <roland@hack.frob.com>

	* sysdeps/unix/sysv/linux/i386/fork.h: Moved ...
	* sysdeps/unix/sysv/linux/i386/arch-fork.h: ... here.
	Don't do #include_next.
	* sysdeps/unix/sysv/linux/x86_64/fork.h: Moved ...
	* sysdeps/unix/sysv/linux/x86_64/arch-fork.h: ... here.
	Don't do #include_next.
	* sysdeps/unix/sysv/linux/mips/arch-fork.h: New file.
	* sysdeps/unix/sysv/linux/mips/fork.h: File removed.
	* sysdeps/unix/sysv/linux/powerpc/arch-fork.h: New file.
	* sysdeps/unix/sysv/linux/powerpc/fork.h: File removed.

2014-05-16  Allan McRae  <allan@archlinux.org>

	* po/sv.po: Update Swedish translation from translation project.

	* timezone/Makefile ($(objpfx)tzselect): Use correct variable
	in sed expression.

2014-05-16  Aurelien Jarno  <aurelien@aurel32.net>

	[BZ #16917]
	* sysdeps/unix/sysv/linux/ptsname.c (__ptsname_internal): Return
	errno if the TIOCGPTN ioctl fails with an error different than
	EINVAL.
	* login/tst-ptsname.c: New file.
	* login/Makefile (tests): Add tst-ptsname.

	[BZ #16943]
	* sysdeps/unix/sysv/linux/sparc/bits/resource.h: Declare prlimit
	and prlimit64.

2014-05-15  Siddhesh Poyarekar  <siddhesh@redhat.com>

	[BZ #16849]
	* sysdeps/posix/getaddrinfo.c (gaih_inet): Only check for
	herrno to return EAI_AGAIN.

2014-05-14  Roland McGrath  <roland@hack.frob.com>

	* sysdeps/unix/sysv/linux/i386/nptl/c++-types.data: Moved ...
	* sysdeps/unix/sysv/linux/i386/c++-types.data: ... here.
	* sysdeps/unix/sysv/linux/i386/nptl/ld.abilist: Moved ...
	* sysdeps/unix/sysv/linux/i386/ld.abilist: ... here.
	* sysdeps/unix/sysv/linux/i386/nptl/libBrokenLocale.abilist: Moved ...
	* sysdeps/unix/sysv/linux/i386/libBrokenLocale.abilist: ... here.
	* sysdeps/unix/sysv/linux/i386/nptl/libanl.abilist: Moved ...
	* sysdeps/unix/sysv/linux/i386/libanl.abilist: ... here.
	* sysdeps/unix/sysv/linux/i386/nptl/libc.abilist: Moved ...
	* sysdeps/unix/sysv/linux/i386/libc.abilist: ... here.